Add production-ready Docker, Compose, and README files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,13 @@
-services:\n  app:\n    build: .\n    ports:\n      - 8000:8000
+﻿version: '3.9'
+
+services:
+  api:
+    build: .
+    container_name: neuralcura_api
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
