--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,15 +3,15 @@ kind: Ingress
 metadata:
   name: neuralcura-ingress
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
   - hosts:
-      - api.neuralcura.dev
+    - neuralcura.example.com
     secretName: neuralcura-tls
   rules:
-  - host: api.neuralcura.dev
+  - host: neuralcura.example.com
     http:
       paths:
       - path: /
